k8s/platform/nginx-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: nginx
spec:
  controllerName: gateway.nginx.org/nginx-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: devths-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All

    # 개발용 프런트
    - name: dev-web-https
      port: 443
      protocol: HTTPS
      hostname: dev.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-dev
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All

    # 개발용 백엔드
    - name: dev-api-https
      port: 443
      protocol: HTTPS
      hostname: dev.api.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-dev
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All

    # 개발용 인공지능
    - name: dev-ai-https
      port: 443
      protocol: HTTPS
      hostname: dev.ai.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-dev
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All

    # 스테이징 프런트
    - name: stg-web-https
      port: 443
      protocol: HTTPS
      hostname: stg.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-stg
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All

    # 스테이징 백엔드
    - name: stg-api-https
      port: 443
      protocol: HTTPS
      hostname: stg.api.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-stg
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All

    # 스테이징 인공지능
    - name: stg-ai-https
      port: 443
      protocol: HTTPS
      hostname: stg.ai.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-stg
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All

    # 아르고 CD
    - name: argo-https
      port: 443
      protocol: HTTPS
      hostname: nonprod.argo.devths.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: devths-tls-argo
            namespace: nginx-gateway
      allowedRoutes:
        namespaces:
          from: All
